--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-html lang="ja">
+<!DOCTYPE html>
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +28,7 @@ html lang="ja">
                 <h2 id="input-message">ゲームオーバー</h2>
                 <p>見えた文字を入力してください</p>
                 <div class="input-group">
-                    <input type="text" id="answer-input" placeholder="例：ふんすい" autocomplete="off">
+                    <input type="text" id="answer-input" placeholder="例：ぶんどき" autocomplete="off">
                     <button id="submit-btn" class="game-btn">送信</button>
                 </div>
                 <button id="retry-btn" class="game-btn hidden">もう一度挑戦！</button>
