Change title and heading text to 'ジャンプ！'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ふんすいジャンプ！</title>
+    <title>ジャンプ！</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
         <div id="ui-layer">
             <!-- タイトル画面 -->
             <div id="title-screen" class="screen active">
-                <h1 class="game-title">ふんすいジャンプ！</h1>
+                <h1 class="game-title">ジャンプ！</h1>
                 <p class="instruction">タップでジャンプ / ダブルタップでしゃがみ</p>
                 <button id="start-btn" class="game-btn">ゲーム開始</button>
             </div>
